# design

./: .gitmodules  LICENSE  Makefile  README.md
api/: cli.md  nucleus.md  uv.md
app/: main.js  test-uv.js
docs/: nucleus.md
implementations/ducktape/: .gitignore  Makefile  main.c  test.js
implementations/duktape/: .gitignore  Cargo.toml  Makefile  README.md  env.c  env.h  main.c  rust-path.h
implementations/duktape/duv/: Makefile  async.c  async.h  callbacks.c  callbacks.h  check.c  check.h  dns.h  dschema.c  dschema.h  duv.c  duv.h  fs.h  fs_event.c  fs_event.h  fs_poll.c  fs_poll.h  handle.c  handle.h  idle.c  idle.h  loop.c  loop.h  misc.h  pipe.c  pipe.h  poll.c  poll.h  prepare.c  prepare.h  process.h  signal.h  stream.c  stream.h  tcp.c  tcp.h  timer.c  timer.h  tty.c  tty.h  (+4 more)
implementations/duktape/example-apps/: .gitignore  Makefile
implementations/duktape/example-apps/echo-server-src/: main.js  pretty-print.js
implementations/duktape/example-apps/repl-src/: main.js  pretty-print.js  theme-256.js
implementations/duktape/rust_path/: Cargo.toml
implementations/duktape/rust_path/src/: helpers.rs  lib.rs
implementations/duktape/src/: lib.rs
implementations/rusty-duktape/: Cargo.toml
implementations/rusty-duktape/src/: main.rs
test/: common.js
test/fixtures/: a.js
test/manual/: main.js  test-nucleus.js
test/parallel/: test-nucleus-compile.js  test-nucleus-dofile.js  test-nucleus-get-set-env.js  test-nucleus-pathjoin.js  test-nucleus-readfile.js  test-nucleus-scandir.js  test-nucleus.exit.js  test-nucleus.js
tools/: test.py
(+1 files in other folders)
